--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/connect-redis": "0.0.10",
     "@types/express": "^4.17.0",
+    "@types/express-session": "^1.15.13",
     "@types/glob": "^7.1.1",
+    "@types/redis": "^2.8.13",
+    "connect-redis": "^3.4.1",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "glob": "^7.1.4",
     "module-alias": "^2.2.0",
+    "redis": "^2.8.0",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.2"
   },
