--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "express-session": "^1.16.2",
     "glob": "^7.1.4",
     "module-alias": "^2.2.0",
+    "mysql": "^2.17.1",
     "redis": "^2.8.0",
+    "reflect-metadata": "^0.1.13",
     "ts-node": "^8.3.0",
+    "typeorm": "^0.2.18",
     "typescript": "^3.5.2"
   },
   "devDependencies": {
