--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "dist",
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc-watch --onSuccess \"node dist\""
+    "clean": "rimraf dist",
+    "build": "npm run clean && tsc",
+    "dev": "npm run clean && tsc-watch --onSuccess \"node dist\""
   },
   "author": "azorvk",
   "license": "ISC",
@@ -27,6 +28,7 @@
     "@types/express-session": "^1.15.13",
     "@types/glob": "^7.1.1",
     "@types/redis": "^2.8.13",
+    "rimraf": "^2.6.3",
     "tsc-watch": "^2.2.1"
   },
   "_moduleAliases": {
