--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "azorvk",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "connect-redis": "^3.4.1",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
@@ -19,10 +20,11 @@
     "mysql": "^2.17.1",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.18",
+    "typeorm": "github:azorvk/typeorm",
     "typescript": "^3.5.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/connect-redis": "0.0.10",
     "@types/express": "^4.17.0",
     "@types/express-session": "^1.15.13",
