--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "dist",
   "scripts": {
+    "test": "jest --verbose",
     "clean": "rimraf dist",
     "build": "npm run clean && tsc",
-    "dev": "npm run clean && tsc-watch --onSuccess \"node dist\""
+    "dev": "npm run clean && tsc-watch --onSuccess \"node dist/src\""
   },
   "author": "azorvk",
   "license": "ISC",
@@ -29,11 +30,15 @@
     "@types/express": "^4.17.0",
     "@types/express-session": "^1.15.13",
     "@types/glob": "^7.1.1",
+    "@types/jest": "^24.0.15",
     "@types/redis": "^2.8.13",
+    "jest": "^24.8.0",
     "rimraf": "^2.6.3",
+    "ts-jest": "^24.0.2",
     "tsc-watch": "^2.2.1"
   },
   "_moduleAliases": {
-    "~": "dist"
+    "~": "dist/src"
   }
+  
 }
