--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "class-validator": "^0.11.0",
     "connect-redis": "^3.4.1",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
@@ -22,7 +23,7 @@
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.0-alpha.24",
-    "typescript": "^3.5.2"
+    "typescript": "^3.7.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
