--- a/package.json
+++ b/package.json
@@ -12,30 +12,34 @@
   "author": "azorvk",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.6",
+    "bcrypt": "^3.0.7",
     "class-validator": "^0.11.0",
     "connect-redis": "^3.4.1",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "glob": "^7.1.4",
+    "helmet": "^3.21.2",
     "module-alias": "^2.2.0",
     "mysql": "^2.17.1",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.0-alpha.24",
-    "typescript": "^3.7.2"
+    "typeorm": "^0.3.0-rc.2",
+    "typescript": "^3.7.5",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/connect-redis": "0.0.10",
     "@types/express": "^4.17.0",
-    "@types/express-session": "^1.15.13",
+    "@types/express-session": "^1.15.16",
     "@types/glob": "^7.1.1",
-    "@types/jest": "^24.0.15",
+    "@types/helmet": "0.0.45",
+    "@types/jest": "^24.9.0",
     "@types/redis": "^2.8.13",
+    "@types/uuid": "^3.4.6",
     "jest": "^24.8.0",
     "rimraf": "^2.6.3",
-    "ts-jest": "^24.0.2",
+    "ts-jest": "^24.3.0",
     "tsc-watch": "^2.2.1"
   },
   "_moduleAliases": {
