--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "dist",
   "scripts": {
+    "docker:dev": "docker-compose -f docker-compose-dev.yml up",
     "test": "jest --verbose",
     "clean": "rimraf dist",
     "build": "npm run clean && tsc",
@@ -12,7 +13,7 @@
   "author": "azorvk",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.7",
+    "bcryptjs": "^2.4.3",
     "class-validator": "^0.11.0",
     "connect-redis": "^3.4.1",
     "express": "^4.17.1",
@@ -24,11 +25,10 @@
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.0-rc.2",
-    "typescript": "^3.7.5",
-    "uuid": "^3.4.0"
+    "typescript": "^3.7.5"
   },
   "devDependencies": {
-    "@types/bcrypt": "^3.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/connect-redis": "0.0.10",
     "@types/express": "^4.17.0",
     "@types/express-session": "^1.15.16",
