--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tsc-api",
+  "name": "ts-ddd-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "A typescript domain-driven design API framework for new projects.",
   "main": "dist",
   "scripts": {
     "docker:dev": "docker-compose -f docker-compose-dev.yml up",
@@ -19,24 +19,24 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "glob": "^7.1.4",
-    "helmet": "^3.21.2",
+    "helmet": "^3.21.3",
     "module-alias": "^2.2.0",
-    "mysql": "^2.17.1",
+    "mysql": "^2.18.1",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.0-rc.2",
-    "typescript": "^3.7.5"
+    "typeorm": "^0.3.0-rc.19",
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/connect-redis": "0.0.10",
-    "@types/express": "^4.17.0",
-    "@types/express-session": "^1.15.16",
+    "@types/express": "^4.17.3",
+    "@types/express-session": "^1.17.0",
     "@types/glob": "^7.1.1",
     "@types/helmet": "0.0.45",
-    "@types/jest": "^24.9.0",
-    "@types/redis": "^2.8.13",
-    "@types/uuid": "^3.4.6",
+    "@types/jest": "^24.9.1",
+    "@types/redis": "^2.8.16",
+    "@types/uuid": "^3.4.8",
     "jest": "^24.8.0",
     "rimraf": "^2.6.3",
     "ts-jest": "^24.3.0",
