--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "class-validator": "^0.11.0",
+    "class-validator": "^0.11.1",
     "connect-redis": "^3.4.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-session": "^1.16.2",
+    "express-session": "^1.17.1",
     "glob": "^7.1.4",
-    "helmet": "^3.21.3",
+    "helmet": "^3.22.0",
     "module-alias": "^2.2.0",
     "mysql": "^2.18.1",
     "redis": "^2.8.0",
@@ -30,13 +31,14 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/connect-redis": "0.0.10",
-    "@types/express": "^4.17.3",
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.6",
     "@types/express-session": "^1.17.0",
     "@types/glob": "^7.1.1",
     "@types/helmet": "0.0.45",
     "@types/jest": "^24.9.1",
-    "@types/redis": "^2.8.16",
-    "@types/uuid": "^3.4.8",
+    "@types/redis": "^2.8.20",
+    "@types/uuid": "^3.4.9",
     "jest": "^24.8.0",
     "rimraf": "^2.6.3",
     "ts-jest": "^24.3.0",
