--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "A typescript domain-driven design API framework for new projects.",
   "main": "dist",
   "scripts": {
-    "docker:dev": "docker-compose -f docker-compose-dev.yml up",
+    "docker:dev": "docker stack deploy --compose-file=docker-compose-dev.yml api",
+    "docker:stop": "docker stack rm api",
+    "docker:log": "docker ps | grep node | cut -d' ' -f1 - | xargs docker logs -f",
+    "docker:log:error": "docker ps | grep node | cut -d' ' -f1 - | xargs -o -I {} docker exec -it {} sh -c 'tail -f /var/log/error.log'",
+    "docker:ssh": "docker ps | grep node | cut -d' ' -f1 - | xargs -o -I {} docker exec -it {} sh",
     "test": "jest --verbose",
     "clean": "rimraf dist",
     "build": "npm run clean && tsc",
@@ -20,28 +24,31 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "glob": "^7.1.4",
-    "helmet": "^3.22.0",
+    "helmet": "^3.23.3",
     "module-alias": "^2.2.0",
     "mysql": "^2.18.1",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.0-rc.19",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.7",
+    "uuid": "^8.3.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/connect-redis": "0.0.10",
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.6",
+    "@types/cors": "^2.8.7",
+    "@types/express": "^4.17.7",
     "@types/express-session": "^1.17.0",
-    "@types/glob": "^7.1.1",
+    "@types/glob": "^7.1.3",
     "@types/helmet": "0.0.45",
     "@types/jest": "^24.9.1",
-    "@types/redis": "^2.8.20",
+    "@types/redis": "^2.8.25",
     "@types/uuid": "^3.4.9",
     "jest": "^24.8.0",
     "rimraf": "^2.6.3",
     "ts-jest": "^24.3.0",
+    "ts-mockito": "^2.6.1",
     "tsc-watch": "^2.2.1"
   },
   "_moduleAliases": {
