--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A typescript domain-driven design API framework for new projects.",
   "main": "dist",
   "scripts": {
-    "docker:dev": "docker stack deploy --compose-file=docker-compose-dev.yml api",
-    "docker:stop": "docker stack rm api",
+    "docker:dev": "docker stack deploy --compose-file=docker-compose-dev.yml app",
+    "docker:stop": "docker stack rm app",
     "docker:log": "docker ps | grep node | cut -d' ' -f1 - | xargs docker logs -f",
     "docker:log:error": "docker ps | grep node | cut -d' ' -f1 - | xargs -o -I {} docker exec -it {} sh -c 'tail -f /var/log/error.log'",
     "docker:ssh": "docker ps | grep node | cut -d' ' -f1 - | xargs -o -I {} docker exec -it {} sh",
@@ -17,39 +17,43 @@
   "author": "azorvk",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "class-validator": "^0.11.1",
-    "connect-redis": "^3.4.1",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "glob": "^7.1.4",
-    "helmet": "^3.23.3",
-    "module-alias": "^2.2.0",
-    "mysql": "^2.18.1",
-    "redis": "^2.8.0",
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.0-rc.19",
-    "typescript": "^3.9.7",
-    "uuid": "^8.3.0",
-    "winston": "^3.3.3"
+    "bcryptjs": "2.4.3",
+    "class-validator": "0.12.2",
+    "cls-hooked": "4.2.2",
+    "connect-redis": "5.0.0",
+    "cors": "2.8.5",
+    "express": "4.17.1",
+    "express-session": "1.17.1",
+    "glob": "7.1.6",
+    "helmet": "4.1.1",
+    "module-alias": "2.2.2",
+    "mysql": "2.18.1",
+    "redis": "3.0.2",
+    "reflect-metadata": "0.1.13",
+    "swagger-jsdoc": "4.0.0",
+    "typeorm": "0.3.0-rc.19",
+    "typescript": "4.0.3",
+    "uuid": "8.3.0",
+    "winston": "3.3.3"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/connect-redis": "0.0.10",
-    "@types/cors": "^2.8.7",
-    "@types/express": "^4.17.7",
-    "@types/express-session": "^1.17.0",
-    "@types/glob": "^7.1.3",
-    "@types/helmet": "0.0.45",
-    "@types/jest": "^24.9.1",
-    "@types/redis": "^2.8.25",
-    "@types/uuid": "^3.4.9",
-    "jest": "^24.8.0",
-    "rimraf": "^2.6.3",
-    "ts-jest": "^24.3.0",
-    "ts-mockito": "^2.6.1",
-    "tsc-watch": "^2.2.1"
+    "@types/bcryptjs": "2.4.2",
+    "@types/cls-hooked": "4.3.1",
+    "@types/connect-redis": "0.0.14",
+    "@types/cors": "2.8.7",
+    "@types/express": "4.17.8",
+    "@types/express-session": "1.17.0",
+    "@types/glob": "7.1.3",
+    "@types/helmet": "0.0.48",
+    "@types/jest": "26.0.14",
+    "@types/redis": "2.8.27",
+    "@types/swagger-jsdoc": "3.0.2",
+    "@types/uuid": "8.3.0",
+    "jest": "26.4.2",
+    "rimraf": "3.0.2",
+    "ts-jest": "26.3.0",
+    "ts-mockito": "2.6.1",
+    "tsc-watch": "4.2.9"
   },
   "_moduleAliases": {
     "~": "dist/src"
